--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>springboot-helloworld</module>
+        <module>springboot-log4j2</module>
     </modules>
 
 
