--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/target/
-!.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -30,7 +28,7 @@
 /mvnw
 /mvnw.cmd
 
-## Package Files ###
+### Package Files ###
 *.jar
 *.war
 *.nar
@@ -39,5 +37,9 @@
 *.tar.gz
 *.rar
 
-## System Files ###
+### System Files ###
 .DS_Store
+
+
+### Code ###
+/target/
