--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>springboot-helloworld</module>
         <module>springboot-log4j2</module>
+        <module>springboot-aop</module>
     </modules>
 
 
