--- a/springboot-aop/pom.xml
+++ b/springboot-aop/pom.xml
@@ -34,10 +34,19 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+
+<!--        高级AOP-->
+        <!-- aop 依赖 -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.31</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <!-- 用于日志切面中，以 json 格式打印出入参 -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
         </dependency>
     </dependencies>
 
