--- a/springboot-mail/pom.xml
+++ b/springboot-mail/pom.xml
@@ -10,17 +10,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springboot-tutorial</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>springboot-com.geekerstar.interceptor</module>
-        <module>springboot-mail</module>
-    </modules>
+    <artifactId>springboot-mail</artifactId>
 
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -29,6 +20,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -36,15 +32,10 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.31</version>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
