更改模板扩展名

--- a/springboot-freemarker-sample/src/main/resources/application.properties
+++ b/springboot-freemarker-sample/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=8080
 spring.freemarker.cache=false
 spring.freemarker.checkTemplateLocation=true
 spring.freemarker.contentType=text/html
-spring.freemarker.suffix=.html
+spring.freemarker.suffix=.ftl
 spring.freemarker.templateEncoding=UTF-8
 spring.freemarker.templateLoaderPath=classpath:/templates/
