--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>springboot-web</module>
         <module>springboot-redis</module>
         <module>springboot-thymeleaf</module>
+        <module>springboot-jpa</module>
     </modules>
 
 
