SpringBoot集成多数据源JPA

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>springboot-redis</module>
         <module>springboot-thymeleaf</module>
         <module>springboot-jpa</module>
+        <module>springboot-multi-jpa</module>
     </modules>
 
 
