SpringBoot集成多数据源，集成Mybatis注解形式

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>springboot-thymeleaf</module>
         <module>springboot-jpa</module>
         <module>springboot-multi-jpa</module>
+        <module>springboot-mybatis-annotation</module>
     </modules>
 
 
