SpringBoot集成Mybatis多数据源注解形式

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>springboot-jpa</module>
         <module>springboot-multi-jpa</module>
         <module>springboot-mybatis-annotation</module>
+        <module>springboot-mybatis-annotation-multi</module>
     </modules>
 
 
