SpringBoot整合mybatis多数据源xml形式

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>springboot-mybatis-annotation</module>
         <module>springboot-mybatis-annotation-multi</module>
         <module>springboot-mybatis-xml</module>
+        <module>springboot-mybatis-xml-multi</module>
     </modules>
 
 
