SpringBoot集成邮件发送优化

--- a/springboot-mail/src/main/resources/application.properties
+++ b/springboot-mail/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.mail.password=znmhmlvpxvczbice
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
