--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>springboot-schedule</module>
         <module>springboot-package</module>
         <module>springboot-package-war</module>
+        <module>springboot-upload</module>
     </modules>
 
 
