Springboot集成Flowable工作流

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>springboot-source</module>
         <module>springboot-elasticjob</module>
         <module>springboot-mybatis-generator</module>
+        <module>springboot-flowable</module>
     </modules>
 
 
