--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+###########################################
+##         Powered By Geekerstar         ##
+## Github：https://github.com/geekerstar ##
+## Blog：https://www.geekerstar.com      ##
+## 极客文库：https://www.jikewenku.com    ##
+## 猿码素材：https://www.yuanmasucai.com  ##
+###########################################
 
 ### STS ###
 .apt_generated
