--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>springboot-flowable</module>
         <module>springboot-druid</module>
         <module>springboot-exception</module>
+        <module>springboot-fastjson</module>
     </modules>
     <packaging>pom</packaging>
 
