--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>springboot-druid</module>
         <module>springboot-exception</module>
         <module>springboot-fastjson</module>
+        <module>springboot-kafka</module>
     </modules>
     <packaging>pom</packaging>
 
