--- a/springboot-druid/src/main/resources/application.properties
+++ b/springboot-druid/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # \u8FD94\u4E2A\u53C2\u6570key\u91CC\u4E0D\u5E26druid\u4E5F\u53EF\u4EE5\uFF0C\u5373\u53EF\u4EE5\u8FD8\u7528\u4E0A\u9762\u7684\u8FD9\u4E2A4\u4E2A\u53C2\u6570
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/springbootv2?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
@@ -42,8 +42,8 @@ spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.sta
 spring.datasource.druid.use-global-data-source-stat=true
 
 # druid\u8FDE\u63A5\u6C60\u76D1\u63A7
-spring.datasource.druid.stat-view-servlet.login-username=admin
-spring.datasource.druid.stat-view-servlet.login-password=111111
+spring.datasource.druid.stat-view-servlet.login-username=root
+spring.datasource.druid.stat-view-servlet.login-password=root
 # \u6392\u9664\u4E00\u4E9B\u9759\u6001\u8D44\u6E90\uFF0C\u4EE5\u63D0\u9AD8\u6548\u7387
 spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
 
