优化统一异常

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <module>springboot-shiro-simple</module>
         <module>springboot-mybatis-plus</module>
         <module>springboot-mybatis-plus-crud</module>
+        <module>springboot-resource</module>
     </modules>
     <packaging>pom</packaging>
 
