--- a/springboot-jwt/src/main/resources/application.properties
+++ b/springboot-jwt/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.com.songguoliang.springboot=debug
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/springboot?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
-spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 
 # \u521D\u59CB\u5316\u65F6\u5EFA\u7ACB\u7269\u7406\u8FDE\u63A5\u7684\u4E2A\u6570
 spring.datasource.druid.initial-size=5
