--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,9 @@
         <module>springboot-webssh</module>
         <module>springboot-aop-limit</module>
         <module>springboot-actuator</module>
+        <module>springboot-elasticsearch</module>
+        <module>springboot-rabbitmq</module>
+        <module>springboot-rocketmq</module>
     </modules>
     <packaging>pom</packaging>
 
