--- a/springboot-rabbitmq/pom.xml
+++ b/springboot-rabbitmq/pom.xml
@@ -38,16 +38,10 @@
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
         </dependency>
-        <!--swagger-->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>2.0.3</version>
         </dependency>
         <!--RabbitMQ 测试依赖-->
 <!--        <dependency>-->
@@ -90,6 +84,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.12.RELEASE</version>
             </plugin>
         </plugins>
     </build>
