--- a/springboot-kafka/src/main/resources/application.yml
+++ b/springboot-kafka/src/main/resources/application.yml
@@ -1,12 +1,22 @@
-spring:
+server:
+  port: 443
+  ssl:
+    key-store: 3702162_wechat.coding-geek.com.pfx
+    key-store-password: 49Jk65Pi
+
+template:
+  templates:
+    - {"templateId":"1","templateFilePath":"F:/workSpace/mooc_workspace/kafka_study/src/main/resources/template/template.json","active": true}
+    - {"templateId":"2","templateFilePath":"F:/workSpace/mooc_workspace/kafka_study/src/main/resources/template/template.json","active": false}
+  template-result-type: 0  # 0-文件获取 1-数据库获取 2-ES
+  template-result-file-path: "F:/workSpace/mooc_workspace/kafka_study/src/main/resources/template/templateResult.json"
+
+wechat:
   kafka:
-    consumer:
-      bootstrap-servers: localhost:9092
-      group-id: group_id
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-    producer:
-      bootstrap-servers: localhost:9092
-      key-deserializer: org.apache.kafka.common.serialization.StringSerializer
-      value-deserializer: org.apache.kafka.common.serialization.StringSerializer
+    bootstrap_servers: "192.168.220.128:9092"
+    acks_config: "all"
+    partitioner_class: "com.imooc.geek.kafka.producer.SamplePartition"
+
+
+logging:
+  config: classpath:logback.xml
